libs/override_key_core/tests/errors/invalid_syntax_parentheses.rs
use override_key_derive::ApplyOverrides;

#[derive(ApplyOverrides)]
struct InvalidSyntax {
    // parentheses form not allowed
    #[override_key("iproyal.endpoint")]
    endpoint: Option<String>,
}

fn main() {}