libs/override_key_core/tests/errors/invalid_syntax_parentheses.stderr
error: invalid #[override_key("...")] form — use #[override_key = "..."] instead
 --> tests/errors/invalid_syntax_parentheses.rs:6:5
  |
6 |     #[override_key("iproyal.endpoint")]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
